# avr-rust-attiny85-test

./: Cargo.toml  avr-attiny85.json
.cargo/: config
src/: main.rs
