[package]
name = "smart-relay-rust"
version = "0.1.0"
authors = ["Anders Conbere <anders@conbere.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
